# single-version

./: LICENSE  README.rst  pyproject.toml  setup.py
.github/workflows/: test.yml
debian/: changelog  control  copyright  files  rules  watch
debian/source/: options
single_version/: __init__.py  ver.py
tests/: test_single_version.py
