[tool.poetry]
name = "single-version"
version = "1.5"
description = "Small utility to define version string for Poetry-style Python project."
authors = ["Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"]
maintainers = [
    "Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"
]
readme = "README.rst"
license = "MIT"
homepage = "https://github.com/hongquan/single-version"
repository = "https://github.com/hongquan/single-version.git"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3 :: Only"
]

[tool.poetry.dependencies]
python = "^3.6"
importlib_metadata = { version = "^2.0", python = "< 3.8" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-flake8 = "^1.0"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
