[tool.poetry]
name = "single-version"
version = "1.6.0"
description = "Small utility to define version string for Poetry-style Python project."
authors = ["Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"]
maintainers = [
    "Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"
]
readme = "README.rst"
license = "MIT"
homepage = "https://github.com/hongquan/single-version"
repository = "https://github.com/hongquan/single-version.git"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3 :: Only"
]

[tool.poetry.dependencies]
python = "^3.7"
importlib_metadata = { version = "^2.0", python = "< 3.8" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.0.284"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
